<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_delivery" />

    <TextView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:visibility="gone"
        android:text="@string/logout"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <atirek.pothiwala.utility.components.SquareImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:riv_corner_radius="@dimen/_5sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_white"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>