<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_delivery" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLicense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/license"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/city"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black60a"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="@dimen/_14ssp" />

                <RadioGroup
                    android:id="@+id/rgUserType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_60a"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp">

                    <RadioButton
                        android:id="@+id/rbCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:checked="true"
                        android:text="@string/customer"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <Space
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbDriver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:text="@string/driver"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </RadioGroup>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_white"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>