<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_delivery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_60a"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black60a"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_14ssp" />

        <RadioGroup
            android:id="@+id/rgUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_white_60a"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_12sdp">

            <RadioButton
                android:id="@+id/rbCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/customer"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <Space
                android:layout_width="@dimen/_5sdp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/driver"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />


        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_white"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>