<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_delivery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/postFeedback"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_60a"
                android:gravity="start"
                android:hint="@string/enterFeedback"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black60a"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="@dimen/_14ssp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_white"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>