<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_delivery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_12sdp">

                <ImageButton
                    android:id="@+id/btnMenu"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@android:color/transparent"
                    android:scaleType="center"
                    android:src="@drawable/ic_menu" />

                <Space
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/cell_vehicle" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/cell_booking" />

                <TextView
                    android:id="@+id/tvEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/noData"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <atirek.pothiwala.utility.components.SquareImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile"
                    app:riv_corner_radius="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/nav_header_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/nav_header_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:background="@color/black20a" />

                <TextView
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>